[package]
name = "soroban-chonk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Chunked content storage for Soroban smart contracts"
repository = "https://github.com/wyhaines/soroban-chonk"
readme = "README.md"
keywords = ["soroban", "stellar", "blockchain", "storage", "chunked"]
categories = ["no-std", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
